# Solo-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  x64_vs2019_setup.bat  x86_vs2019_setup.bat
SoloEditor/: CMakeLists.txt
SoloEditor/res/: basic.shader  skybox.shader
SoloEditor/src/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  SoloEditorApp.cpp  main.cpp
SoloEngine/: CMakeLists.txt  Solo.h
SoloEngine/src/: CMakeLists.txt
SoloEngine/src/AudioSystem/: AudioEngine.cpp  AudioEngine.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt
SoloEngine/src/Collections/: CMakeLists.txt  Octree.cpp  Octree.h
SoloEngine/src/Core/: App.cpp  App.h  AppLayer.cpp  AppLayer.h  CMakeLists.txt  Engine.cpp  Engine.h  EntryPoint.h  EventBase.h  EventRouter.cpp  EventRouter.h  LayerStack.cpp  LayerStack.h  Logger.h  System.h  ThreadSafe.h  TimeStep.h
SoloEngine/src/Events/: AppEvent.h  CMakeLists.txt  Event.h  GamepadEvent.h  KeyEvent.h  MouseEvent.h
SoloEngine/src/Input/: CMakeLists.txt  GamepadCodes.h  InputManager.cpp  InputManager.h  KeyCodes.h  MouseCodes.h
SoloEngine/src/PhysicsSystem/: CMakeLists.txt  PhysicsSystem.cpp  PhysicsSystem.h
SoloEngine/src/Platform/: CMakeLists.txt  DetectPlatform.h
SoloEngine/src/RenderingSystem/: CMakeLists.txt  Constants.h  CubeMap.cpp  CubeMap.h  Image.cpp  Image.h  Image3D.cpp  Image3D.h  RenderComponents.h  RenderingSystem.cpp  RenderingSystem.h  Shader.cpp  Shader.h  ShaderPipeline.cpp  ShaderPipeline.h  SmartVoxelContainer.hpp  Texture.cpp  Texture.h  Texture3D.cpp  Texture3D.h  Uniform.cpp  Uniform.h  VertexArrayObject.cpp  VertexArrayObject.h  Window.cpp  Window.h
SoloEngine/src/Scene/: CMakeLists.txt  Camera.cpp  Camera.h  Scene.cpp  Scene.h
